RESOLVED FIXED22529
Crashes seen on buildbots due to trying to stop a worker thread twice
https://bugs.webkit.org/show_bug.cgi?id=22529
Summary Crashes seen on buildbots due to trying to stop a worker thread twice
Alexey Proskuryakov
Reported 2008-11-27 03:03:43 PST
If a worker is asked to terminate, and then its object gets destroyed, WorkerThread::stop() can be called during thread destruction.
Attachments
proposed fix (1.15 KB, patch)
2008-11-27 03:05 PST, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2008-11-27 03:05:50 PST
Created attachment 25557 [details] proposed fix
Alexey Proskuryakov
Comment 2 2008-11-27 10:03:17 PST
Committed revision 38821.
Note You need to log in before you can comment on or make changes to this bug.