        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=22529
        Crashes seen on buildbots due to trying to stop a worker thread twice

        * dom/WorkerMessagingProxy.cpp: (WebCore::WorkerMessagingProxy::workerObjectDestroyed):
        Don't try to stop the thread if it's already stopping.



git-svn-id: svn://svn.chromium.org/blink/trunk@38821 bbb929c8-8fbe-4397-9dbb-9b2b20218538